--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>isvConsoleMapController</members>
-        <name>ApexClass</name>
-    </types>
-     <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
+        <members>ISV_Console_Admin</members>
+        <name>PermissionSet</name>
     </types>
     <version>48.0</version>
 </Package>
