--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>listContainer</members>
         <name>LightningComponentBundle</name>
     </types>
     <version>48.0</version>
