--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>modifyLicenseExpiration</members>
+        <members>listContainerController</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+     <types>
+        <members>listContainer</members>
         <name>LightningComponentBundle</name>
     </types>
+    <types>
+        <members>statusServerController</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>maintenanceEvents</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>badge</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>itemActionCard</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>eventSummaryCard</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <!--
+    
+    
+    
+    
+    <types>
+        <members>*</members>
+        <name>LightningMessageChannel</name>
+    </types>
+    -->
     <version>48.0</version>
 </Package>
 <!-- Grab Recommendation data and file for packaging -->
