--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <!--
     <types>
         <members>listContainerController</members>
         <name>ApexClass</name>
     </types>
+    
     <types>
         <members>*</members>
         <name>AuraDefinitionBundle</name>
     </types>
-     <types>
-        <members>listContainer</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>statusServerController</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>maintenanceEvents</members>
-        <name>LightningComponentBundle</name>
-    </types>
+     
+    
     <types>
         <members>badge</members>
         <name>LightningComponentBundle</name>
@@ -29,19 +21,41 @@
         <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>eventSummaryCard</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <!--
-    
-    
-    
-    
-    <types>
         <members>*</members>
         <name>LightningMessageChannel</name>
     </types>
+    <types>
+        <members>eventSummaryCard</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>listContainerController</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>listContainer</members>
+        <name>LightningComponentBundle</name>
+    </types>
     -->
+    
+
+    <types>
+        <members>testListContainerController</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>statusServerController</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>maintenanceEvents</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    
+    
+    
+    
+    
     <version>48.0</version>
 </Package>
 <!-- Grab Recommendation data and file for packaging -->
