fix dependencies for team dev

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -32,22 +32,19 @@
         <members>listContainerController</members>
         <name>ApexClass</name>
     </types>
-      <types>
-        <members>testListContainerController</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>statusServerController</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>maintenanceEvents</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    -->
+
     <types>
         <members>listContainer</members>
         <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>sfLma__License__c</members>
+        <name>CustomObject</name>
+    </types>
+    -->
+    <types>
+        <members>Happening_Now</members>
+        <name>FlexiPage</name>
     </types>
 
   
