bf rm pagination

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -10,12 +10,17 @@
         <members>*</members>
         <name>AuraDefinitionBundle</name>
     </types>
-     
-    
+
+    <types>
+        <members>eventSummaryCard</members>
+        <name>LightningComponentBundle</name>
+    </types>
     <types>
         <members>badge</members>
         <name>LightningComponentBundle</name>
     </types>
+    
+    
     <types>
         <members>itemActionCard</members>
         <name>LightningComponentBundle</name>
@@ -24,10 +29,7 @@
         <members>*</members>
         <name>LightningMessageChannel</name>
     </types>
-    <types>
-        <members>eventSummaryCard</members>
-        <name>LightningComponentBundle</name>
-    </types>
+    
     <types>
         <members>listContainerController</members>
         <name>ApexClass</name>
@@ -41,16 +43,33 @@
         <members>sfLma__License__c</members>
         <name>CustomObject</name>
     </types>
-    -->
     <types>
         <members>Happening_Now</members>
         <name>FlexiPage</name>
     </types>
-
+     <types>
+        <members>maintenanceEvents</members>
+        <name>LightningComponentBundle</name>
+    </types>
   
-    
-    
-    
+     <types>
+        <members>statusServerController</members>
+        <name>ApexClass</name>
+    </types>
+    -->
+     <types>
+        <members>modalLauncher</members>
+        <name>AuraDefinitionBundle</name>
+    </types>  
+   
+      <types>
+        <members>eventSummaryCard</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>badge</members>
+        <name>LightningComponentBundle</name>
+    </types>
     
     
     <version>48.0</version>
