--- a/sfdx-out/package.json
+++ b/sfdx-out/package.json
@@ -7,7 +7,7 @@
             },
             "sfLma__Latest_Version__c": "1.0",
             "sfLma__Package_ID__c": "033j0000001QdLfAAK",
-            "Name": "MyPackage",
+            "Name": "MyPackage2",
             "sfLma__Release_Date__c": "2020-05-20"
         }
     ]
