adding maintenance lwc changes

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -35,10 +35,7 @@
         <name>ApexClass</name>
     </types>
 
-    <types>
-        <members>listContainer</members>
-        <name>LightningComponentBundle</name>
-    </types>
+   
     <types>
         <members>sfLma__License__c</members>
         <name>CustomObject</name>
@@ -47,7 +44,8 @@
         <members>Happening_Now</members>
         <name>FlexiPage</name>
     </types>
-     <types>
+     
+    <types>
         <members>maintenanceEvents</members>
         <name>LightningComponentBundle</name>
     </types>
@@ -56,8 +54,7 @@
         <members>statusServerController</members>
         <name>ApexClass</name>
     </types>
-    -->
-     <types>
+    <types>
         <members>modalLauncher</members>
         <name>AuraDefinitionBundle</name>
     </types>  
@@ -70,6 +67,22 @@
         <members>badge</members>
         <name>LightningComponentBundle</name>
     </types>
+    -->
+     <types>
+        <members>isvHubStyles</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    
+    <types>
+        <members>isvConsoleMap</members>
+        <name>LightningComponentBundle</name>
+    </types>
+
+     <types>
+        <members>listContainer</members>
+        <name>LightningComponentBundle</name>
+    </types>
+
     
     
     <version>48.0</version>
