--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -147,14 +147,54 @@
         <members>maintenanceEvents</members>
         <name>LightningComponentBundle</name>
     </types>
-    -->
- 
-      <types>
+    <types>
         <members>listContainer</members>
         <name>LightningComponentBundle</name>
     </types>
-   
+
+     <types>
+        <members>manageData</members>
+        <name>ApexClass</name>
+    </types>
+
     
+
+    
+
+     
+
+    
+
+    <types>
+        <members>postInstallClass</members>
+        <name>ApexClass</name>
+    </types>
+
+    <types>
+        <members>testListContainerController</members>
+        <name>ApexClass</name>
+    </types>
+    -->
+    <types>
+        <members>postInstallClass</members>
+        <name>ApexClass</name>
+    </types>
+   <types>
+        <members>schedDeleteMaintenanceEvents</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>schedFetchMaintenance</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>callTrustAPI</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>TestFactory</members>
+        <name>ApexClass</name>
+    </types>
     <version>48.0</version>
 </Package>
 <!-- Grab Recommendation data and file for packaging -->
